Fix colophon text overlap on mobile

--- a/src/theme/hud.scss
+++ b/src/theme/hud.scss
@@ -158,7 +158,7 @@ svg * {
 }
 
 .colophon img {
-  height: 3rem;
+  height: 2.5rem;
 }
 
 .colophon a {
@@ -167,8 +167,8 @@ svg * {
 
 .colophon-divider {
   border-left: 1px solid $text-color;
-  margin: 0 1rem;
-  height: 3rem;
+  margin: 0 0.5rem;
+  height: 2.5rem;
   display: inline-block;
 }
 
